improvments to some viz demos. including standalone performance tests for chart.js v1 and v2, to demonstrate that it's too slow for use with multiple channels

--- a/Viz/www/demos/eeg/flot/index.html
+++ b/Viz/www/demos/eeg/flot/index.html
@@ -26,7 +26,22 @@
     </div>
     <!-- -->
     <div class="demo-container">
-        <div id="placeholder" class="demo-placeholder" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer0" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer1" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer2" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer3" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer4" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer5" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer6" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer7" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer8" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer9" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer10" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer11" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer12" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer13" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer14" style="height: 100px; width:50%;"></div>
+        <div id="chartContainer15" style="height: 100px; width:50%;"></div>
     </div>
 
 
