moving forward with canvas.js, other library demos as well. performance enhancements, including: 1. improved timing accuracy of SignalGenerator to match desired sampling frequency. now uses hybrid of sleep & busy-wait, and has calibration mode flag to change ratio between the two for a specific install  2. redraw speed of canvas.js eeg demo, now able to smoothly redraw at 12fps - 24fps with all 16 channels, both downsample and not, both sine and rand  3. on websocket connection open, viz server now sends "handshake" to inform frontend UI of available metrics. additionally, Connections now are aware of conf.yml file used by run.py  4. bug fixes & optimizations

--- a/Viz/www/demos/eeg/chartjs1/main.html
+++ b/Viz/www/demos/eeg/chartjs1/main.html
@@ -44,8 +44,7 @@
     <!-- metric channel container -->
     <div id="first" class="box chartContainer">
         <select class="metricSelect">
-            <option value="eeg" selected="selected">eeg</option>
-            <option value="eeg" >eegd</option>
+            <option value="viz_eeg" selected="selected">viz_eeg</option>
         </select>
         <!-- connection buttons -->
         <button class="connect">connect</button><button class="disconnect">disconnect</button>
