--- a/Viz/www/demos/eeg/plotly/3d.html
+++ b/Viz/www/demos/eeg/plotly/3d.html
@@ -14,7 +14,7 @@
     <!-- metric channel container -->
     <div id="first" class="box chartContainer">
         <select class="metricSelect">
-            <option value="eegd" selected="selected">eegd</option>
+            <option value="viz_eeg" selected="selected">viz_eeg</option>
         </select>
         <!-- connection buttons -->
         <button class="connect">connect</button>
