--- a/Viz/www/index.html
+++ b/Viz/www/index.html
@@ -12,6 +12,7 @@
                     <fieldset>
                         <legend>Streaming EEG</legend>
                         <p><a href="/demos/eeg/canvasjs/index.html">CanvasJS</a></p>
+                        <p><a href="/demos/eeg/canvasjs/all_in_one.html">CanvasJS (all in one)</a></p>
                         <p><a href="/demos/eeg/flot/index.html">Flot</a></p>
                         <p><a href="/demos/eeg/plotly/3d.html">plotly.js 3D</a></p>
                         <p><a href="/demos/eeg/plotly/index.html">plotly.js</a></p>
