--- a/Viz/www/demos/eeg/flot/index.html
+++ b/Viz/www/demos/eeg/flot/index.html
@@ -16,7 +16,7 @@
     <!-- metric channel container -->
     <div id="first" class="box chartContainer">
         <select class="metricSelect">
-            <option value="eegd" selected="selected">eegd</option>
+            <option value="viz_eeg" selected="selected">viz_eeg</option>
         </select>
         <!-- connection buttons -->
         <!-- connection buttons -->
