added foundation framework to make frontend look good added recorder module consolidate Viz demos code to use templating

--- a/Viz/www/demos/eeg/canvasjs/all_in_one.html
+++ b/Viz/www/demos/eeg/canvasjs/all_in_one.html
@@ -51,7 +51,7 @@
     </div>
     <!-- -->
         <!-- canvas -->
-        <canvas id="chartContainer0"></canvas>
+        <div id="chartContainer0"></div>
 
         <!--
         <div id="chartContainer0" style="height: 100px; width:50%;"></div>
