added foundation framework to make frontend look good added recorder module consolidate Viz demos code to use templating make yml examples clearer

--- a/Viz/www/demos/eeg/canvasjs/index.html
+++ b/Viz/www/demos/eeg/canvasjs/index.html
@@ -68,14 +68,14 @@
 
                 <section class="section">
                     <!-- metric channel container -->
-                    <div id="first" class="box chartContainer hidden">
+                    <div id="first" class="box chartContainer">
                         <br/>
                         metric: <select class="metricSelect">
                             <option value="viz_eeg" selected="selected">viz_eeg</option>
                         </select>
                         <!-- connection buttons -->
-                        <button class="connect">connect</button>
-                        <button class="disconnect hidden">disconnect</button>
+                        <button class="button expanded large connect">connect</button>
+                        <button class="hidden button expanded large alert disconnect">disconnect</button>
                     </div>
                     <!-- -->
                 </section>
