--- a/Viz/www/demos/eeg/index.html
+++ b/Viz/www/demos/eeg/index.html
@@ -13,7 +13,7 @@
 
     <style>
         /* this style will be slightly different per charting library */
-        .multichart { height: 100px; width:100%; }
+        .multichart { height: 100px; width:500px; }
     </style>
 <head>
 <body lang="en">
