improved naming convention of conf files added support for NeuroSky

--- a/Viz/www/demos/eeg/canvasjs/all_in_one.html
+++ b/Viz/www/demos/eeg/canvasjs/all_in_one.html
@@ -7,7 +7,7 @@
     <script src="/multiplex.js"></script>
     <script src="/lib/canvasjs/jquery.canvasjs.min.js"></script>
     <script src="eeg-canvasjs-single.js"></script>
-    <script src="../demo-ui.js"></script>
+    <script src="../demo.js"></script>
 
 <head>
 <body lang="en">
