--- a/Viz/www/demos/eeg/canvasjs/index.html
+++ b/Viz/www/demos/eeg/canvasjs/index.html
@@ -152,7 +152,7 @@
     <script src="/lib/sockjs/sockjs.min.js"></script><!-- https://github.com/sockjs/sockjs-client/blob/master/dist/sockjs-1.0.3.min.js -->
     <script src="/multiplex.js"></script>
     <script src="/lib/canvasjs/jquery.canvasjs.min.js"></script>
-    <script src="../demo-ui.js"></script><!-- universal js code for demo pages-->
+    <script src="../demo.js"></script><!-- universal js code for demo pages-->
     <script src="eeg-canvasjs-multi.js"></script>
 </body>
 </html>
