--- a/Viz/www/demos/eeg/flot/index.html
+++ b/Viz/www/demos/eeg/flot/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="/lib/flot/jquery.flot.canvas.js"></script>
     <script type="text/javascript" src="/lib/flot/jquery.flot.downsample.js"></script>
     <script src="/multiplex.js"></script>
-    <script src="../demo-ui.js"></script>
+    <script src="../demo.js"></script>
     <script src="eeg-flot.js"></script>
     <style>
         .multichart { height: 100px; width:100%; }
