--- a/Viz/www/demos/eeg/index.html
+++ b/Viz/www/demos/eeg/index.html
@@ -108,8 +108,8 @@
                             </div>
                             <div class="small-7 columns">
                                 <select id="deviceTypeSelect">
-                                    <option value="openbci" selected>OpenBCI</option>
-                                    <option value="neurosky">NeuroSky</option>
+                                    <option value="openbci">OpenBCI</option>
+                                    <option value="neurosky" selected>NeuroSky</option>
                                 </select>
                             </div>
                         </div>
