--- a/Viz/www/demos/eeg/index.html
+++ b/Viz/www/demos/eeg/index.html
@@ -108,8 +108,8 @@
                             </div>
                             <div class="small-7 columns">
                                 <select id="deviceTypeSelect">
-                                    <option value="openbci">OpenBCI</option>
-                                    <option value="neurosky" selected>NeuroSky</option>
+                                    <option value="openbci" selected>OpenBCI</option>
+                                    <option value="neurosky">NeuroSky</option>
                                 </select>
                             </div>
                         </div>
@@ -118,20 +118,20 @@
                                 <label for="yMin" class="right inline">min</label>
                             </div>
                             <div class="small-4 columns">
-                                <input id="yMin" type="text" value="-2048" />
+                                <input id="yMin" type="text" value="-25000" />
                             </div>
                             <div class="small-2 columns">
                                 <label for="yMin" class="right inline">max</label>
                             </div>
                             <div class="small-4 columns">
-                                <input id="yMax" type="text" value="2048" size="5" />
+                                <input id="yMax" type="text" value="25000" size="5" />
                             </div>
                         </div>
 
                     </section>
 
                     <section class="section">
-                        # datapoints: <input type="text" id="dataLength" value="1024" size="4"/>
+                        # datapoints: <input type="text" id="dataLength" value="1250" size="4"/>
                     </section>
                 </section>
             </div>
